[FIX] website: language selector blurry flag
In this PR,

Added `Image-rendering` attribute in the `o_lang_flag` class which specifies the image rendering algorithm to prevent the downscaling of the image which was the cause of the blurry flag & `object-fit` attribute to fit the image perfectly in the container.

task: 2929438

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1361,6 +1361,8 @@ header {
     height: 1.5em;
     margin-right: 0.2em;
     border-radius: $rounded-pill;
+    object-fit: cover;
+    image-rendering: pixelated;
 }
 span.list-inline-item.o_add_language:last-child {
     display: none !important; // Hide the separator if it is the last list item
